--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,9 @@ POSSIBILITY OF SUCH DAMAGE.
           </execution>
         </executions>
       </plugin>
-       <plugin>
+      <!-- Comment out for time being because it is breaking build -->
+      <!--
+      <plugin>
       <groupId>com.github.github</groupId>
       <artifactId>site-maven-plugin</artifactId>
       <version>0.12</version>
@@ -178,6 +180,7 @@ POSSIBILITY OF SUCH DAMAGE.
         </execution>
       </executions>
     </plugin>
+    -->
     </plugins>
     <pluginManagement>
       <plugins>
