--- a/.github/workflows/stable-cicd.yaml
+++ b/.github/workflows/stable-cicd.yaml
@@ -68,7 +68,7 @@ jobs:
                     restore-keys: pds-${{runner.os}}-mvn-
             -
                 name: 🤠 Roundup
-                uses: nasa-pds/roundup-action@stable
+                uses: NASA-PDS/roundup-action@stable
                 with:
                     assembly: stable
                 env:
