--- a/.github/workflows/unstable-cicd.yaml
+++ b/.github/workflows/unstable-cicd.yaml
@@ -67,7 +67,7 @@ jobs:
                     restore-keys: pds-${{runner.os}}-mvn-
             -
                 name: 🤠 Roundup
-                uses: nasa-pds/roundup-action@stable
+                uses: NASA-PDS/roundup-action@stable
                 with:
                     assembly: unstable
                 env:
