--- a/pom.xml
+++ b/pom.xml
@@ -446,7 +446,7 @@ POSSIBILITY OF SUCH DAMAGE.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- PDS4 schema version -->
-    <model-version>1J00</model-version>
+    <model-version>1K00</model-version>
     <pds3-product-tools.version>4.3.0</pds3-product-tools.version>
     <maven.antrun.version>3.1.0</maven.antrun.version>
   </properties>
