--- a/pom.xml
+++ b/pom.xml
@@ -393,7 +393,7 @@ POSSIBILITY OF SUCH DAMAGE.
     <dependency>
       <groupId>gov.nasa.pds</groupId>
       <artifactId>opencsv</artifactId>
-      <version>5.4-SNAPSHOT</version>
+      <version>5.4</version>
     </dependency>
     <dependency>
       <groupId>gov.nasa.gsfc.heasarc</groupId>
