--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,11 @@ POSSIBILITY OF SUCH DAMAGE.
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+        <groupId>xalan</groupId>
+        <artifactId>serializer</artifactId>
+        <version>2.7.3</version>
+    </dependency>
 
     <dependency>
       <groupId>oro</groupId>
