--- a/pom.xml
+++ b/pom.xml
@@ -131,25 +131,15 @@
           </execution>
         </executions>
       </plugin>
-      <!-- Comment out for time being because it is breaking build -->
-      <!--
       <plugin>
-      <groupId>com.github.github</groupId>
-      <artifactId>site-maven-plugin</artifactId>
-      <version>0.12</version>
-      <configuration>
-        <message>Creating site for ${project.version}</message>
-      </configuration>
-      <executions>
-        <execution>
-          <goals>
-            <goal>site</goal>
-          </goals>
-          <phase>site</phase>
-        </execution>
-      </executions>
-    </plugin>
-    -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>4.0.0-M14</version>
+        <configuration>
+          <skip>false</skip>  <!-- This is `true` in parent pom -->
+          <skipDeploy>false</skipDeploy>  <!-- This is `true` in parent pom -->
+        </configuration>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
