--- a/pom.xml
+++ b/pom.xml
@@ -416,6 +416,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Java version -->
+    <maven.compiler.release>17</maven.compiler.release>
     <!-- PDS4 schema version -->
     <model-version>1K00</model-version>
     <pds3-product-tools.version>4.4.2</pds3-product-tools.version>
