Bundle local repository dependencies using Maven Shade Plugin
This change addresses NASA-PDS/software-issues-repo#141 by using the
Maven Shade Plugin to embed vicario and opencsv dependencies directly
into the pds4-jparser JAR file.

Previously, these dependencies were only available in the local 'repo/'
directory, requiring downstream projects to configure the local repository
in their pom.xml. This approach was not scalable and caused dependency
resolution issues.

Changes:
- Add maven-shade-plugin configuration to bundle gov.nasa.pds:vicario
  and gov.nasa.pds:opencsv into the main JAR
- Update .gitignore to exclude generated dependency-reduced-pom.xml
- No code changes required; all imports remain unchanged
- Shaded JAR increases from 501KB to 1.4MB (~900KB for both dependencies)

Benefits:
- Downstream projects no longer need to configure local repository
- Simplifies dependency management for consumers
- Both VICAR export and CSV parsing functionality work correctly
- All tests pass with shaded dependencies

Tested with:
- mvn clean package (successful build)
- TwoDImageExporterTest#testVicarImageExport (VICAR functionality)
- TableReaderTest (OpenCSV functionality)

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,39 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.6.0</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <!-- Only include local repo dependencies that cause issues for downstream projects -->
+              <artifactSet>
+                <includes>
+                  <include>gov.nasa.pds:vicario</include>
+                  <include>gov.nasa.pds:opencsv</include>
+                </includes>
+              </artifactSet>
+              <!-- Keep dependency-reduced POM clean -->
+              <createDependencyReducedPom>true</createDependencyReducedPom>
+              <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+              <!-- Preserve existing manifest entries -->
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <manifestEntries>
+                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                  </manifestEntries>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
           <execution>
