--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,12 @@
       <artifactId>xercesImpl</artifactId>
       <version>2.12.2</version>
       <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>xalan</groupId>
